--- a/python-server_side_rendering/templates/about.html
+++ b/python-server_side_rendering/templates/about.html
@@ -4,7 +4,9 @@
         <title>About Us</title>
     </head>
     <body>
+        {% include 'header.html' %}
         <h1>About Us</h1>
         <p>This page to describe our website.</p>
+        {% include 'footer.html' %}
     </body>
 </html>
