--- a/python-server_side_rendering/templates/contact.html
+++ b/python-server_side_rendering/templates/contact.html
@@ -4,7 +4,9 @@
         <title>Contact Us</title>
     </head>
     <body>
+        {% include 'header.html' %}
         <h1>Contact Us</h1>
         <p>For more information, please contact us</p>
+        {% include 'footer.html' %}
     </body>
 </html>
