--- a/python-server_side_rendering/templates/product_display.html
+++ b/python-server_side_rendering/templates/product_display.html
@@ -5,10 +5,11 @@
     <title>Product Display</title>
 </head>
 <body>
-    <h1>Product List</h1>
+    {% include 'header.html' %}
+    <h1>Product Display</h1>
     {% if error %}
     <p style="color: red;">{{ error }}</p>
-    {% elif products %}
+    {% else %}
     <table>
         <tr>
             <th>Name</th>
@@ -23,8 +24,7 @@
         </tr>
         {% endfor %}
     </table>
-    {% else %}
-    <p>No products found.</p>
     {% endif %}
+    {% include 'footer.html' %}
 </body>
 </html>
